# Apply-Tracker-cpp

./: .gitignore  CMakeLists.txt  README.md
apps/api/: main.cpp
apps/cli/: main.cpp
config/: app.json
include/apply-tracker/application/: ApplicationService.hpp
include/apply-tracker/config/: AppConfig.hpp
include/apply-tracker/domain/: ApplicationRepository.hpp  JobApplication.hpp
include/apply-tracker/infrastructure/: GoogleAuth.hpp  GoogleSheetsRepository.hpp  HttpClient.hpp
src/application/: ApplicationService.cpp
src/config/: AppConfig.cpp
src/infrastructure/: GoogleAuth.cpp  GoogleSheetsRepository.cpp  HttpClient.cpp
tests/: AppConfigTests.cpp  ApplicationServiceTests.cpp
